--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -4,14 +4,14 @@ html(lang='en')
     head
 
         meta(charset='utf-8')
-        meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-        meta(name='description', content='')
-        meta(name='author', content='')
+        meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+        meta(name='description' content='')
+        meta(name='author' content='')
 
-        title Modern Business - Start Bootstrap Template
+        title Adsinfos
 
         // Favicon
-        link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
+        link(rel='icon' type='image/x-icon' href='assets/favicon.ico')
 
         include includes/css.pug
 
@@ -27,7 +27,7 @@ html(lang='en')
                 .container.px-5.mb-5
                     .text-center.mb-5
                         h1.display-5.fw-bolder.mb-0
-                            span.text-gradient.d-inline Projects
+                            span.text-gradient.d-inline Canales
                     .row.gx-5.justify-content-center
 
                         .col-lg-11.col-xl-9.col-xxl-8
@@ -37,25 +37,51 @@ html(lang='en')
                                 .card-body.p-0
                                     .d-flex.align-items-center
                                         .p-5
-                                            h2.fw-bolder Project Name 1
-                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!
-                                        img.img-fluid(src='https://dummyimage.com/300x400/343a40/6c757d', alt='...')
+                                            h2.fw-bolder Convocatorias Bolivia
+                                            p Miles de Convocatorias publicadas diariamente del Gobierno Boliviano en nuestro canal de Telegram y direccionadas a nuestro sitio web, 3403 convocatorias y contando!
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://t.me/sicoesnotificaciones' target="_blank") Ver
+                                            a.btn.btn-outline-dark.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://is.gd/jDvrUi' target="_blank") Ejemplo
+                                        img.img-fluid(src='assets/sicoes.png' alt='...' width="300" height="400")
 
                             // Project Card 2
-                            .card.overflow-hidden.shadow.rounded-4.border-0
+                            .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
                                 .card-body.p-0
                                     .d-flex.align-items-center
                                         .p-5
-                                            h2.fw-bolder Project Name 2
-                                            p Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!
-                                        img.img-fluid(src='https://dummyimage.com/300x400/343a40/6c757d', alt='...')
+                                            h2.fw-bolder Divisas
+                                            p Divisas y cotizacion diaria del Dolar, Euro, otras monedas, Oro, Plata, etc.
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://t.me/preciodeldolarBolivia' target="_blank") Ver
+                                            a.btn.btn-outline-dark.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://v.gd/NQ55sl' target="_blank") Ejemplo
+                                        img.img-fluid(src='assets/divisas.png' alt='...' width="300" height="400")
+
+                            // Project Card 2
+                            .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
+                                .card-body.p-0
+                                    .d-flex.align-items-center
+                                        .p-5
+                                            h2.fw-bolder Monitoreo de servers
+                                            p Monitoreo constante de servidores  y servicios de Bolivia, util para saber su estado en cualquier momento
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://t.me/monitorBolivia' target="_blank") Ver
+                                            a.btn.btn-outline-dark.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://v.gd/ih7a9L' target="_blank") Ejemplo
+                                        img.img-fluid(src='assets/monitor.png' alt='...' width="300" height="400")
+
+
+                            // Project Card 2
+                            .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
+                                .card-body.p-0
+                                    .d-flex.align-items-center
+                                        .p-5
+                                            h2.fw-bolder Canales de variedades
+                                            p Notiicas de tecnologia, cine, programacion, internacional, deportes y muchas mas!
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://t.me/Idotodobot' target="_blank") Ver
+                                        img.img-fluid(src='assets/noticias.png' alt='...' width="300" height="400")
 
             // Call to action section
             section.py-5.bg-gradient-primary-to-secondary.text-white
                 .container.px-5.my-5
                     .text-center
-                        h2.display-4.fw-bolder.mb-4 Let's build something together
-                        a.btn.btn-outline-light.btn-lg.px-5.py-3.fs-6.fw-bolder(href='contact.html') Contact me
+                        h2.display-4.fw-bolder.mb-4 Usa nuestro BOT
+                        a.btn.btn-outline-light.btn-lg.px-5.py-3.fs-6.fw-bolder(href='https://t.me/Idotodobot') Hablame
 
         // Footer
         include includes/footer.pug
