--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,8 @@
 // Variables
 
 // Override Bootstrap Colors
-$blue: #1e30f3;
-$pink: #e21e80;
+$blue: #1941ea;
+$pink: #07effb;
 
 // Redefine Bootstrap State Colors
 $primary: $blue;
