--- a/src/pug/includes/navbar.pug
+++ b/src/pug/includes/navbar.pug
@@ -1,7 +1,7 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-white.py-3
     .container.px-5
         a.navbar-brand(href='index.html')
-            span.fw-bolder.text-primary Start Bootstrap
+            img.profile-img(src='https://adsinfo.me/assets/images/completo2.png', alt='...', width=75, height=50)
         button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
             span.navbar-toggler-icon
         #navbarSupportedContent.collapse.navbar-collapse
@@ -9,8 +9,6 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.py-3
                 li.nav-item
                     a.nav-link(href='index.html') Home
                 li.nav-item
-                    a.nav-link(href='resume.html') Resume
+                    a.nav-link(href='projects.html') Canales
                 li.nav-item
-                    a.nav-link(href='projects.html') Projects
-                li.nav-item
-                    a.nav-link(href='contact.html') Contact
+                    a.nav-link(href='contact.html') Acerca de
