--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Personal - Start Bootstrap Theme
+        title Adsinfos
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -30,13 +30,13 @@ html(lang='en')
                             // Header text content
                             .text-center.text-xxl-start
                                 .badge.bg-gradient-primary-to-secondary.text-white.mb-4
-                                    .text-uppercase Design &middot; Development &middot; Marketing
-                                .fs-3.fw-light.text-muted I can help your business to
+                                    .text-uppercase Publicaciones &middot; Automatización &middot; Marketing
+                                .fs-3.fw-light.text-muted Toda la información  
                                 h1.display-3.fw-bolder.mb-5
-                                    span.text-gradient.d-inline Get online and grow fast
+                                    span.text-gradient.d-inline Con nuestro Bot de Telegram
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
-                                    a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='resume.html') Resume
-                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='projects.html') Projects
+                                    a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://t.me/Idotodobot' target="_blank") Acceder al BOT
+                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='projects.html') Canales
                         .col-xxl-7
                             // Header profile picture
                             .d-flex.justify-content-center.mt-5.mt-xxl-0
@@ -60,15 +60,15 @@ html(lang='en')
                         .col-xxl-8
                             .text-center.my-5
                                 h2.display-5.fw-bolder
-                                    span.text-gradient.d-inline About Me
-                                p.lead.fw-light.mb-4 My name is Start Bootstrap and I help brands grow.
-                                p.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit dolorum itaque qui unde quisquam consequatur autem. Eveniet quasi nobis aliquid cumque officiis sed rem iure ipsa! Praesentium ratione atque dolorem?
+                                    span.text-gradient.d-inline Acerca de 
+                                p.lead.fw-light.mb-4 Somos un grupo de Canales y bots que monitorizan y publican
+                                p.text-muted Desde noticias, cotización de divisas, monitoreo de servidores, monitoreo de convocatorias de gobiernos a empresas y personas, etc.
                                 .d-flex.justify-content-center.fs-2.gap-4
-                                    a.text-gradient(href="#!") 
-                                        i.bi.bi-twitter
-                                    a.text-gradient(href="#!") 
+                                    a.text-gradient(href="https://www.facebook.com/profile.php?id=100091522652992") 
+                                        i.bi.bi-facebook
+                                    a.text-gradient(href="https://www.linkedin.com/company/monitoreo-de-convocatorias-sicoes-bolivia/") 
                                         i.bi.bi-linkedin
-                                    a.text-gradient(href="#!") 
+                                    a.text-gradient(href="https://github.com/adsinfos") 
                                         i.bi.bi-github
 
         // Footer
