--- a/src/pug/includes/scripts.pug
+++ b/src/pug/includes/scripts.pug
@@ -1,5 +1,16 @@
+var src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9676834375313066";
+
 // Bootstrap core JS
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js')
 
 // Core theme JS
 script(src='js/scripts.js')
+
+script (async).
+  // Google tag (gtag.js)
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date())
+  gtag('config', 'G-0VXQ0BXBEZ')
+
+script (async src=src crossorigin="anonymous")
