--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -31,7 +31,7 @@ html(lang='en')
                             .text-center.text-xxl-start
                                 .badge.bg-gradient-primary-to-secondary.text-white.mb-4
                                     .text-uppercase Publicaciones &middot; Automatización &middot; Marketing
-                                .fs-3.fw-light.text-muted Toda la información  
+                                .fs-3.fw-light.text-muted Miles de publicaciones al dia! 
                                 h1.display-3.fw-bolder.mb-5
                                     span.text-gradient.d-inline Con nuestro Bot de Telegram
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
