--- a/src/pug/includes/scripts.pug
+++ b/src/pug/includes/scripts.pug
@@ -1,4 +1,3 @@
-var src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9676834375313066";
 
 // Bootstrap core JS
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js')
@@ -13,4 +12,4 @@ script (async).
   gtag('js', new Date())
   gtag('config', 'G-0VXQ0BXBEZ')
 
-script (async src=src crossorigin="anonymous")
+var src = “https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9676834375313066”; script (async src=“# {src}” crossorigin=“anonymous”)
