--- a/src/pug/includes/css.pug
+++ b/src/pug/includes/css.pug
@@ -8,3 +8,16 @@ link(href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-ico
 
 // Core theme CSS (includes Bootstrap)
 link(href='css/styles.css', rel='stylesheet')
+
+|  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9676834375313066"
+|    crossorigin="anonymous"></script>
+
+|  <!-- Google tag (gtag.js) -->
+|  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0VXQ0BXBEZ"></script>
+|  <script>
+|    window.dataLayer = window.dataLayer || [];
+|    function gtag() { dataLayer.push(arguments); }
+|    gtag('js', new Date());
+|
+|    gtag('config', 'G-0VXQ0BXBEZ');
+|  </script>
