--- a/src/pug/includes/css.pug
+++ b/src/pug/includes/css.pug
@@ -21,3 +21,8 @@ link(href='css/styles.css', rel='stylesheet')
 |
 |    gtag('config', 'G-0VXQ0BXBEZ');
 |  </script>
+
+| <!-- Ezoic Code -->
+| 	<script>var ezoicId = 465480;</script>
+| 	<script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js"></script>
+| <!-- Ezoic Code -->
