--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -33,10 +33,9 @@ html(lang='en')
                                     .text-uppercase Publicaciones &middot; Automatización &middot; Marketing
                                 .fs-3.fw-light.text-muted Miles de publicaciones al dia! 
                                 h1.display-3.fw-bolder.mb-5
-                                    span.text-gradient.d-inline Con nuestro Bot de Telegram
+                                    span.text-gradient.d-inline Con nuestro buscador de Convocatorias
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
-                                    a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://t.me/Idotodobot' target="_blank") Acceder al BOT
-                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='projects.html') Canales
+                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://convocatorias.adsinfo.me') Buscador de convocatorias 
                         .col-xxl-7
                             // Header profile picture
                             .d-flex.justify-content-center.mt-5.mt-xxl-0
