--- a/src/pug/includes/css.pug
+++ b/src/pug/includes/css.pug
@@ -26,3 +26,9 @@ link(href='css/styles.css', rel='stylesheet')
 | 	<script>var ezoicId = 465480;</script>
 | 	<script type="text/javascript" src="//go.ezoic.net/ezoic/ezoic.js"></script>
 | <!-- Ezoic Code -->
+
+| <meta charset="UTF-8">
+| <meta name="description" content="Publicamos convocatorias de Bolivia">
+| <meta name="keywords" content="sicoes, convocatorias, consultorias, suministros, materiales, construccion">
+| <meta name="author" content="Adsinfos">
+| <meta name="robots" content="index, follow">
