--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -36,6 +36,10 @@ html(lang='en')
                                     span.text-gradient.d-inline Con nuestro buscador de Convocatorias
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
                                     a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://convocatorias.adsinfo.me') Buscador de convocatorias 
+                                h1.display-3.fw-bolder.mb-5
+                                    span.text-gradient.d-inline Tambien ve nuestras estadisticas de convocatorias
+                                .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
+                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://home.adsinfo.me/estadisticas.html') Estadisticas
                         .col-xxl-7
                             // Header profile picture
                             .d-flex.justify-content-center.mt-5.mt-xxl-0
@@ -67,7 +71,7 @@ html(lang='en')
                                         i.bi.bi-facebook
                                     a.text-gradient(href="https://www.linkedin.com/company/monitoreo-de-convocatorias-sicoes-bolivia/") 
                                         i.bi.bi-linkedin
-                                    a.text-gradient(href="https://github.com/adsinfos") 
+                                    a.text-gradient(href="https://github.com") 
                                         i.bi.bi-github
 
         // Footer
