--- a/src/pug/includes/navbar.pug
+++ b/src/pug/includes/navbar.pug
@@ -9,4 +9,6 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.py-3
                 li.nav-item
                     a.nav-link(href='index.html') Home
                 li.nav-item
+                    a.nav-link(href='estadisticas.html') Estadisticas 
+                li.nav-item
                     a.nav-link(href='contact.html') Acerca de
