--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -37,7 +37,7 @@ html(lang='en')
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
                                     a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://convocatorias.adsinfo.me') Buscador de convocatorias 
                                 h1.display-3.fw-bolder.mb-5
-                                    span.text-gradient.d-inline Tambien ve nuestras estadisticas de convocatorias
+                                    span.text-gradient.d-inline Estadisticas de convocatorias
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
                                     a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://home.adsinfo.me/estadisticas.html') Estadisticas
                         .col-xxl-7
