--- a/src/pug/estadisticas.pug
+++ b/src/pug/estadisticas.pug
@@ -39,7 +39,7 @@ html(lang='en')
                                         .p-5
                                             h2.fw-bolder Estadisticas
                                             p Total de convocatorias leidas por nuestro sistema automatico en los ultimos 45 dias
-                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/estadistica' target="_blank") Ver
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/estadistica' target="_blank") Ver
                                         img.img-fluid(src='assets/esta1.jpg' alt='...' width="300" height="400")
 
                             // Project Card 1
@@ -49,7 +49,7 @@ html(lang='en')
                                         .p-5
                                             h2.fw-bolder Estadisticas de tipo SICOES
                                             p Total diario de convocatorias por el tipo de convocatorias clasificadas por el mismo SICOES
-                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/estadistipo' target="_blank") Ver
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/estadistipo' target="_blank") Ver
                                         img.img-fluid(src='assets/esta2.jpg' alt='...' width="300" height="400")
 
                             // Project Card 1
@@ -59,7 +59,7 @@ html(lang='en')
                                         .p-5
                                             h2.fw-bolder Estadisticas por clasificacion ADSINFO
                                             p Total diario de convocatorias por el tipo de convocatorias clasificadas por ADSINFO
-                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/estadisgrupo' target="_blank") Ver
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/estadisgrupo' target="_blank") Ver
                                         img.img-fluid(src='assets/esta3.jpg' alt='...' width="300" height="400")
 
             // Call to action section
