--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -39,7 +39,7 @@ html(lang='en')
                                 h1.display-3.fw-bolder.mb-5
                                     span.text-gradient.d-inline Estadisticas de convocatorias
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
-                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://home.adsinfo.me/estadisticas.html') Estadisticas
+                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='/estadisticas.html') Estadisticas
                         .col-xxl-7
                             // Header profile picture
                             .d-flex.justify-content-center.mt-5.mt-xxl-0
