--- a/src/pug/estadisticas.pug
+++ b/src/pug/estadisticas.pug
@@ -38,10 +38,10 @@ html(lang='en')
                                     .d-flex.align-items-center
                                         .p-5
                                             h2.fw-bolder Estadisticas
-                                            p Total de convocatorias leidas por nuestro sistema automatico en los ultimos 45 dias
+                                            p Total de convocatorias leidas por nuestro sistema automatico en los ultimos 45 dias.
                                             a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/estadistica' target="_blank") Ver
                                         img.img-fluid(src='assets/esta1.jpg' alt='...' width="300" height="400")
-
+ 
                             // Project Card 1
                             .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
                                 .card-body.p-0
