fix the message

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -33,7 +33,7 @@ html(lang='en')
                                     .text-uppercase Publicaciones &middot; Automatización &middot; Marketing
                                 .fs-3.fw-light.text-muted Miles de publicaciones al dia! 
                                 h1.display-3.fw-bolder.mb-5
-                                    span.text-gradient.d-inline Con nuestro buscador de Convocatorias SICOES BOLIVIA
+                                    span.text-gradient.d-inline Con nuestro buscador de Convocatorias en Bolivia
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
                                     a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://convocatorias.adsinfo.me') Buscador de convocatorias 
                                 h1.display-3.fw-bolder.mb-5
