--- a/src/pug/estadisticas.pug
+++ b/src/pug/estadisticas.pug
@@ -62,6 +62,17 @@ html(lang='en')
                                             a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/estadisgrupo') Ver
                                         img.img-fluid(src='assets/esta3.jpg' alt='...' width="300" height="400")
 
+                            // Project Card 1
+                            .card.overflow-hidden.shadow.rounded-4.border-0.mb-5
+                                .card-body.p-0
+                                    .d-flex.align-items-center
+                                        .p-5
+                                            h2.fw-bolder Estadisticas por gestion y tipo
+                                            p Comparacion de gestiones y lo que va leido por gestion y tipo clasificado por el SICOEs
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/estadisgestion') Ver
+                                        img.img-fluid(src='assets/esta1.jpg' alt='...' width="300" height="400")
+ 
+
             // Call to action section
             section.py-5.bg-gradient-primary-to-secondary.text-white
                 .container.px-5.my-5
