--- a/src/pug/includes/css.pug
+++ b/src/pug/includes/css.pug
@@ -28,7 +28,7 @@ link(href='css/styles.css', rel='stylesheet')
 | <!-- Ezoic Code -->
 
 | <meta charset="UTF-8">
-| <meta name="description" content="Publicamos convocatorias de Bolivia">
-| <meta name="keywords" content="sicoes, convocatorias, consultorias, suministros, materiales, construccion">
+| <meta name="description" content="Publicamos convocatorias del SICOES Bolivia administrado por la DGSGIF">
+| <meta name="keywords" content="sicoes, convocatorias, consultorias, suministros, materiales, construccion, dgsgif, finanzas, bolivia, mefp, economia">
 | <meta name="author" content="Adsinfos">
 | <meta name="robots" content="index, follow">
