--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -64,8 +64,8 @@ html(lang='en')
                             .text-center.my-5
                                 h2.display-5.fw-bolder
                                     span.text-gradient.d-inline Acerca de 
-                                p.lead.fw-light.mb-4 Somos un grupo de Canales y bots que monitorizan y publican
-                                p.text-muted Desde noticias, cotización de divisas, monitoreo de servidores, monitoreo de convocatorias de gobiernos a empresas y personas, etc.
+                                p.lead.fw-light.mb-4 Convocatorias SICIOES
+                                p.text-muted Consultorias, Bienes, Obras y Servicios generales de todas las convocatorias del SICOES
                                 .d-flex.justify-content-center.fs-2.gap-4
                                     a.text-gradient(href="https://www.facebook.com/profile.php?id=100091522652992") 
                                         i.bi.bi-facebook
