--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -1,14 +1,19 @@
-| <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9676834375313066"
-|      crossorigin="anonymous"></script>
-| <ins class="adsbygoogle"
-|      style="display:block"
-|      data-ad-format="fluid"
-|      data-ad-layout-key="-gm-d+x-3h+7r"
-|      data-ad-client="ca-pub-9676834375313066"
-|      data-ad-slot="2686529353"></ins>
-| <script>
-|      (adsbygoogle = window.adsbygoogle || []).push({});
-| </script>
+section.bg-light.py-5
+                .container.px-5
+                    .row.gx-5.justify-content-center
+                        .col-xxl-8
+                            .text-center.my-5
+                                | <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9676834375313066"
+                                |      crossorigin="anonymous"></script>
+                                | <ins class="adsbygoogle"
+                                |      style="display:block"
+                                |      data-ad-format="fluid"
+                                |      data-ad-layout-key="-gm-d+x-3h+7r"
+                                |      data-ad-client="ca-pub-9676834375313066"
+                                |      data-ad-slot="2686529353"></ins>
+                                | <script>
+                                |      (adsbygoogle = window.adsbygoogle || []).push({});
+                                | </script>
 footer.bg-white.py-4.mt-auto
     .container.px-5
         .row.align-items-center.justify-content-between.flex-column.flex-sm-row
