--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -8,7 +8,7 @@ section.bg-light.py-5
                                 | <ins class="adsbygoogle"
                                 |      style="display:block"
                                 |      data-ad-format="fluid"
-                                |      data-ad-layout-key="-gm-d+x-3h+7r"
+                                |      data-ad-layout-key="-gc-v+5r-7l-18"
                                 |      data-ad-client="ca-pub-9676834375313066"
                                 |      data-ad-slot="2686529353"></ins>
                                 | <script>
