--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -33,13 +33,14 @@ html(lang='en')
                                     .text-uppercase Publicaciones &middot; Automatización &middot; Marketing
                                 .fs-3.fw-light.text-muted Miles de publicaciones al dia! 
                                 h1.display-3.fw-bolder.mb-5
-                                    span.text-gradient.d-inline Con nuestro buscador de Convocatorias en Bolivia
+                                    span.text-gradient.d-inline Con nuestro buscador de Convocatorias y licitaciones
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
-                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://convocatorias.adsinfo.me') Buscador de convocatorias 
+                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://convocatorias.adsinfo.me/#/bo') Sicoes Bolivia
+                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://convocatorias.adsinfo.me/#/cl') ChileCompra
                                 h1.display-3.fw-bolder.mb-5
                                     span.text-gradient.d-inline Estadisticas de convocatorias
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
-                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='/estadisticas.html') Estadisticas
+                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='/estadisticas.html') Estadisticas Bolivia
                         .col-xxl-7
                             // Header profile picture
                             .d-flex.justify-content-center.mt-5.mt-xxl-0
@@ -64,8 +65,8 @@ html(lang='en')
                             .text-center.my-5
                                 h2.display-5.fw-bolder
                                     span.text-gradient.d-inline Acerca de 
-                                p.lead.fw-light.mb-4 Convocatorias SICIOES
-                                p.text-muted Consultorias, Bienes, Obras y Servicios generales de todas las convocatorias del SICOES
+                                p.lead.fw-light.mb-4 Convocatorias
+                                p.text-muted Consultorias, Bienes, Obras y Servicios generales de todas las convocatorias del SICOES, Ademas licitaciones de otros paises como las licitaciones de ChileCompra
                                 .d-flex.justify-content-center.fs-2.gap-4
                                     a.text-gradient(href="https://www.facebook.com/profile.php?id=100091522652992") 
                                         i.bi.bi-facebook
