--- a/src/pug/includes/navbar.pug
+++ b/src/pug/includes/navbar.pug
@@ -9,8 +9,10 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.py-3
                 li.nav-item
                     a.nav-link(href='index.html') Home
                 li.nav-item
-                    a.nav-link(href='https://convocatorias.adsinfo.me') Convocatorias 
+                    a.nav-link(href='https://convocatorias.adsinfo.me/#/bo') Compras Bolivia 
                 li.nav-item
-                    a.nav-link(href='estadisticas.html') Estadisticas 
+                    a.nav-link(href='https://convocatorias.adsinfo.me/#/cl') Compras Chile 
+                li.nav-item
+                    a.nav-link(href='estadisticas.html') Estadisticas Bolivia
                 li.nav-item
                     a.nav-link(href='contact.html') Acerca de
