--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -35,8 +35,8 @@ html(lang='en')
                                 h1.display-3.fw-bolder.mb-5
                                     span.text-gradient.d-inline Con nuestro buscador de Convocatorias y licitaciones
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
-                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://convocatorias.adsinfo.me/#/bo') Sicoes Bolivia
-                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='http://convocatorias.adsinfo.me/#/cl') ChileCompra
+                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/bo') Sicoes Bolivia
+                                    a.btn.btn-outline-dark.btn-lg.px-5.py-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/cl') ChileCompra
                                 h1.display-3.fw-bolder.mb-5
                                     span.text-gradient.d-inline Estadisticas de convocatorias
                                 .d-grid.gap-3.d-sm-flex.justify-content-sm-center.justify-content-xxl-start.mb-3
