update new domain

--- a/src/pug/includes/navbar.pug
+++ b/src/pug/includes/navbar.pug
@@ -1,7 +1,7 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-white.py-3
     .container.px-5
         a.navbar-brand(href='index.html')
-            img.profile-img(src='https://adsinfo.me/assets/images/completo2.png', alt='...', width=75, height=50)
+            img.profile-img(src='https://infobots.org/assets/images/completo2.png', alt='...', width=75, height=50)
         button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
             span.navbar-toggler-icon
         #navbarSupportedContent.collapse.navbar-collapse
@@ -9,9 +9,9 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.py-3
                 li.nav-item
                     a.nav-link(href='index.html') Home
                 li.nav-item
-                    a.nav-link(href='https://convocatorias.adsinfo.me/#/bo') Compras Bolivia 
+                    a.nav-link(href='https://convocatorias.infobots.org/#/bo') Compras Bolivia 
                 li.nav-item
-                    a.nav-link(href='https://convocatorias.adsinfo.me/#/cl') Compras Chile 
+                    a.nav-link(href='https://convocatorias.infobots.org/#/cl') Compras Chile 
                 li.nav-item
                     a.nav-link(href='estadisticas.html') Estadisticas Bolivia
                 li.nav-item
