--- a/src/pug/estadisticas.pug
+++ b/src/pug/estadisticas.pug
@@ -39,7 +39,7 @@ html(lang='en')
                                         .p-5
                                             h2.fw-bolder Estadisticas
                                             p Total de convocatorias leidas por nuestro sistema automatico en los ultimos 45 dias.
-                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/estadistica') Ver
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.infobots.org/#/estadistica') Ver
                                         img.img-fluid(src='assets/esta1.jpg' alt='...' width="300" height="400")
  
                             // Project Card 1
@@ -49,7 +49,7 @@ html(lang='en')
                                         .p-5
                                             h2.fw-bolder Estadisticas de tipo SICOES
                                             p Total diario de convocatorias por el tipo de convocatorias clasificadas por el mismo SICOES
-                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/estadistipo') Ver
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.infobots.org/#/estadistipo') Ver
                                         img.img-fluid(src='assets/esta2.jpg' alt='...' width="300" height="400")
 
                             // Project Card 1
@@ -59,7 +59,7 @@ html(lang='en')
                                         .p-5
                                             h2.fw-bolder Estadisticas por clasificacion ADSINFO
                                             p Total diario de convocatorias por el tipo de convocatorias clasificadas por ADSINFO
-                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/estadisgrupo') Ver
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.infobots.org/#/estadisgrupo') Ver
                                         img.img-fluid(src='assets/esta3.jpg' alt='...' width="300" height="400")
 
                             // Project Card 1
@@ -69,7 +69,7 @@ html(lang='en')
                                         .p-5
                                             h2.fw-bolder Estadisticas por gestion y tipo
                                             p Comparacion de gestiones y lo que va leido por gestion y tipo clasificado por el SICOEs
-                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.adsinfo.me/#/estadisgestion') Ver
+                                            a.btn.btn-primary.btn-lg.px-5.py-3.me-sm-3.fs-6.fw-bolder(href='https://convocatorias.infobots.org/#/estadisgestion') Ver
                                         img.img-fluid(src='assets/esta1.jpg' alt='...' width="300" height="400")
  
 
