--- a/src/pug/includes/navbar.pug
+++ b/src/pug/includes/navbar.pug
@@ -9,10 +9,10 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-white.py-3
                 li.nav-item
                     a.nav-link(href='index.html') Home
                 li.nav-item
-                    a.nav-link(href='https://convocatorias.infobots.org/#/bo') Compras Bolivia 
+                    a.nav-link(href='estadisticas.html') ESTADISTICAS ⭐
                 li.nav-item
-                    a.nav-link(href='https://convocatorias.infobots.org/#/cl') Compras Chile 
+                    a.nav-link(href='https://convocatorias.infobots.org/#/bo' ) Compras Bolivia  ⭐
                 li.nav-item
-                    a.nav-link(href='estadisticas.html') Estadisticas Bolivia
+                    a.nav-link(href='https://convocatorias.infobots.org/#/cl') Compras Chile ⭐
                 li.nav-item
                     a.nav-link(href='contact.html') Acerca de
